update new project

--- a/index.html
+++ b/index.html
@@ -156,6 +156,25 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
+                        <h3>Angular Pokedex</h3>
+                        <p>
+                            Developed a full-stack web application using Angular, MongoDB, Express JS, and Node.js<br>
+                            Implemented front-end side in Angular and Typescript<br>
+                            Developed server-side with Node express, implement CRUD with MongoDB<br>
+                            <br><br>
+                        </p>
+                        <a href="https://floating-badlands-56464.herokuapp.com">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img class = "prj" src="images/poke.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
                         <h3>Jesper's Pokedex</h3>
                         <p>
                             Developed a full-stack web application using MongoDB, Express JS, Node.js and Ajax<br>
