--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img class = "prj" src="images/poke.png" />
+                        <img class = "prj" src="images/ang.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
