--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                             Developed server-side with Node express, implement CRUD with MongoDB<br>
                             <br><br>
                         </p>
-                        <a href="https://floating-badlands-56464.herokuapp.com">View Project</a>
+                        <a href="https://github.com/Jesper-SH-Hong/Node-Angular-pokedex">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
