--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
                 <div class="col-md-8">
                     <p>
                         <h3>CST(Computer Systems Technology) Co-op student at BCIT</h3><br>
-                        A passionate Full Stack Software Developer 🚀 having an experience of building Web and Mobile
-                        applications with JavaScript / Nodejs / MongoDB
+                        A passionate Full Stack Software Developer 🚀 having an experience of<br>
+                        <b>Front-end: </b>React, Next.js, jQuery, Tailwind CSS, React Native<br>
+                        <b>Back-end: </b>Python, Java, JavaScript, TypeScript, C, Go, Node, Express, <br>
+                        <b>Database: </b>Prisma, SQL, GraphQL, MongoDB, Firebase<br>
                     </p>
                 </div>
             </div>
@@ -97,11 +99,24 @@
                 <h3>Asiana Airlines</h3>
                 <h4>Loadmaster / Cargo Sales Rep</h4>
                 <p>
-                    - Arranged among headquarter, agent, warehouse, wet lease company to load a special cargo of Seoul
+                    • Arranged among headquarter, agent, warehouse, wet lease company to load a special cargo of Seoul
                     branch. (oversized cargo / DG / pharmaceuticals)<br><br>
-                    - Coordinated shipping schedules with numeral agents for the limited payload of aircraft to maintain
+                    • Coordinated shipping schedules with numeral agents for the limited payload of aircraft to maintain
                     safety and on-time departures.<br><br>
-                    - Check the regulation of the destination to prevent unexpected irregularity.<br>
+                    • Check the regulation of the destination to prevent unexpected irregularity.<br>
+                </p>
+            </div>
+
+            <div data-date="January 2023 – August 2023">
+                <h3>Innovibe</h3>
+                <h4>Software Developer Intern</h4>
+                <p>
+                    • Contributed to client applications that provides reports and booking options to 4K+ customers, across 10+ branches, in real time using the latest technologies of React, Typescript, Go, GraphQL, Docker, and Stripe.<br><br>
+                    • Enhanced the loading speed of specific API calls within the admin dashboard by 80% by minimizing redundant API requests, implementing server-side pagination.<br><br>
+                    • Led the UI design and development of a mobile application from the ground up using React Native, overseeing all aspects, including design and functionality, to deliver a comprehensive set of features comparable to the web service.<br><br>
+                    • Transitioned from GraphQL logic to custom designing of REST API endpoints for the new website and app, tailored to their diverse functionalities.<br><br>
+                    • Participated in weekly scrum sprints / client meeting, diligently completing tasks, and taking initiative where applicable.<br><br>
+                    • Effectively managed team members who came on board the project after me by assigning tasks based on priority, providing context, and conducting peer reviews.
                 </p>
             </div>
 
@@ -118,8 +133,6 @@
             <h4>Computer System Technology (2 Year Diploma Program)</h4>
             <p>
                 <li>GPA: 91%<br>
-                </li>
-                <li>Looking for a co-op job/internship on January 2023.
                 </li>
             </p>
         </div>
