--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     </div>
     <!-- End #projects -->
 
-    <div id="skills">
+    <!-- <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
             <li>JavaScript</li>
@@ -260,7 +260,7 @@
             <li>MongoDB</li>
             <li>jQuery</li>
         </ul>
-    </div>
+    </div> -->
     <!-- End #skills -->
 
     <div id="contact">
