--- a/index.html
+++ b/index.html
@@ -1,330 +1,15 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en">
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Jesper's Portfolio</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
-
-    <style>
-        .prj{
-            width: 300px;
-            height: 300px;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Redirecting...</title>
+    <script type="text/javascript">
+        // 페이지가 로드되자마자 리다이렉트
+        window.location.href = "https://jesperhong.netlify.app"; // 리다이렉트할 URL
+    </script>
 </head>
-
 <body>
-    <div id="mobile-menu-open" class="shadow-large">
-        <i class="fa fa-bars" aria-hidden="true"></i>
-    </div>
-    <!-- End #mobile-menu-toggle -->
-    <header>
-        <div id="mobile-menu-close">
-            <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
-        </div>
-        <ul id="menu" class="shadow">
-            <li>
-                <a href="#about">About</a>
-            </li>
-            <li>
-                <a href="#experience">Experience</a>
-            </li>
-            <li>
-                <a href="#education">Education</a>
-            </li>
-            <li>
-                <a href="#projects">Projects</a>
-            </li>
-            <li>
-                <a href="#skills">Skills</a>
-            </li>
-            <li>
-                <a href="#contact">Contact</a>
-            </li>
-        </ul>
-    </header>
-    <!-- End header -->
-
-    <div id="lead">
-        <div id="lead-content">
-            <h1>Jesper Hong</h1>
-            <h2>Software Engineer</h2>
-            <a href="./images/Sung Hyun Hong_Resume.pdf" class="btn-rounded-white">Download Resume</a>
-        </div>
-        <!-- End #lead-content -->
-
-        <div id="lead-overlay"></div>
-
-        <div id="lead-down">
-            <span>
-                <i class="fa fa-chevron-down" aria-hidden="true"></i>
-            </span>
-        </div>
-        <!-- End #lead-down -->
-    </div>
-    <!-- End #lead -->
-
-    <div id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <h2 class="heading">About Me</h2>
-                </div>
-                <div class="col-md-8">
-                    <p>
-                        <h3>CST(Computer Systems Technology) Co-op student at BCIT</h3><br>
-                        A passionate Full Stack Software Developer 🚀 having an experience of<br>
-                        <b>Front-end: </b>React, Next.js, jQuery, Tailwind CSS, React Native<br>
-                        <b>Back-end: </b>Python, Java, JavaScript, TypeScript, C, Go, Node, Express, <br>
-                        <b>Database: </b>Prisma, SQL, GraphQL, MongoDB, Firebase<br>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- End #about -->
-
-    <div id="experience" class="background-alt">
-        <h2 class="heading">Experience</h2>
-        <div id="experience-timeline">
-            <div data-date="January 2018 – April 2019">
-                <h3>Asiana Airlines</h3>
-                <h4>Loadmaster / Cargo Sales Rep</h4>
-                <p>
-                    • Arranged among headquarter, agent, warehouse, wet lease company to load a special cargo of Seoul
-                    branch. (oversized cargo / DG / pharmaceuticals)<br><br>
-                    • Coordinated shipping schedules with numeral agents for the limited payload of aircraft to maintain
-                    safety and on-time departures.<br><br>
-                    • Check the regulation of the destination to prevent unexpected irregularity.<br>
-                </p>
-            </div>
-
-            <div data-date="January 2023 – August 2023">
-                <h3>Innovibe</h3>
-                <h4>Software Developer Intern</h4>
-                <p>
-                    • Contributed to client applications that provides reports and booking options to 4K+ customers, across 10+ branches, in real time using the latest technologies of React, Typescript, Go, GraphQL, Docker, and Stripe.<br><br>
-                    • Enhanced the loading speed of specific API calls within the admin dashboard by 80% by minimizing redundant API requests, implementing server-side pagination.<br><br>
-                    • Led the UI design and development of a mobile application from the ground up using React Native, overseeing all aspects, including design and functionality, to deliver a comprehensive set of features comparable to the web service.<br><br>
-                    • Transitioned from GraphQL logic to custom designing of REST API endpoints for the new website and app, tailored to their diverse functionalities.<br><br>
-                    • Participated in weekly scrum sprints / client meeting, diligently completing tasks, and taking initiative where applicable.<br><br>
-                    • Effectively managed team members who came on board the project after me by assigning tasks based on priority, providing context, and conducting peer reviews.
-                </p>
-            </div>
-
-        </div>
-    </div>
-    </div>
-    <!-- End #experience -->
-
-    <div id="education">
-        <h2 class="heading">Education</h2>
-        <div class="education-block">
-            <h3>British Columbia Institute of Technology</h3>
-            <span class="education-date">Jan 2022 -</span>
-            <h4>Computer System Technology (2 Year Diploma Program)</h4>
-            <p>
-                <li>GPA: 91%<br>
-                </li>
-            </p>
-        </div>
-        <!-- End .education-block -->
-
-        <div class="education-block">
-            <h3>Yonsei University</h3>
-            <span class="education-date">Jan 2011 - Feb 2018</span>
-            <h4>Bachelor of Business Adminstration <br> Bachelor of Arts(Western History)</h4>
-            <p>
-                <li>
-                    Dual Degree
-                </li>
-                <li>
-                    GPA: 93.9%
-                </li>
-                <li>
-                    2012-2014: Military Service(Army)
-                </li>
-            
-            </p>
-        </div>
-        <!-- End .education-block -->
-    </div>
-    <!-- End #education -->
-
-    <div id="projects" class="background-alt">
-        <h2 class="heading">Projects</h2>
-        <div class="container">
-            <div class="row">
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img class = "prj" src="images/ang.png" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3>Angular Pokedex</h3>
-                        <p>
-                            Developed a full-stack web application using Angular, MongoDB, Express JS, and Node.js<br>
-                            Implemented front-end side in Angular and Typescript<br>
-                            Developed server-side with Node express, implement CRUD with MongoDB<br>
-                            <br><br>
-                        </p>
-                        <a href="https://github.com/Jesper-SH-Hong/Node-Angular-pokedex">View Project</a>
-                    </div>
-                    <!-- End .project-info -->
-                </div>
-                <!-- End .project -->
-
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img class = "prj" src="images/poke.png" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3>Jesper's Pokedex</h3>
-                        <p>
-                            Developed a full-stack web application using MongoDB, Express JS, Node.js and Ajax<br>
-                            Implemented the backend features using asynchronous programming<br>
-                            Developed server-side with Node express, implement CRUD with MongoDB<br>
-                            <br><br>
-                        </p>
-                        <a href="https://floating-badlands-56464.herokuapp.com">View Project</a>
-                    </div>
-                    <!-- End .project-info -->
-                </div>
-                <!-- End .project -->
-
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img class = "prj" src="images/chr.png" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3>Chris: The Game</h3>
-                        <p>
-                            Hackathon Winner (BCIT Hack the Break)<br>Developed simple quiz game similar to ‘Who Wants
-                            to Be A Millionaire’ using React.js<br>     <br>
-                            Be the python master!<br>
-                            <br><br>
-                        </p>
-                        <a href="https://devpost.com/software/chris-the-game">View Project</a>
-                    </div>
-                    <!-- End .project-info -->
-                </div>
-                <!-- End .project -->
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img class = "prj" src="images/Drag.png" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3>DragonSlayer</h3>
-                        <p>
-                            Text-based roleplaying game<br>
-                            Developed a text-based roleplaying game in Python and did unit tests for the game as well.
-                            <br>
-                            Be the hero and defeat Dragon!<br>
-                            <br><br>
-                        </p>
-                        <a href="https://github.com/Jesper-SH-Hong/DragonSlayer">View Project</a>
-                    </div>
-                    <!-- End .project-info -->
-                </div>
-                <!-- End .project -->
-            </div>
-        </div>
-    </div>
-    <!-- End #projects -->
-
-    <!-- <div id="skills">
-        <h2 class="heading">Skills</h2>
-        <ul>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Node.js</li>
-            <li>React</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>MongoDB</li>
-            <li>Object-Oriented Programming(OOP)</li>
-            <li>JSON</li>
-            <li>Agile</li>
-            <li>Git</li>
-            <li>MongoDB</li>
-            <li>jQuery</li>
-        </ul>
-    </div> -->
-    <!-- End #skills -->
-
-    <div id="contact">
-        <h2>Get in Touch</h2>
-        <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
-                <input type="hidden" name="_subject" value="shong101@my.bcit.ca" />
-                <input type="email" name="_replyto" placeholder="Your email" required>
-                <textarea name="message" placeholder="Your message" required></textarea>
-                <button type="submit">Send</button>
-            </form>
-        </div>
-        <!-- End #contact-form -->
-    </div>
-    <!-- End #contact -->
-
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-5 copyright">
-                    <p>
-                        Copyright &copy; <span id="current-year">2022</span> Jesper hong
-                    </p>
-                </div>
-                <div class="col-sm-2 top">
-                    <span id="to-top">
-                        <i class="fa fa-chevron-up" aria-hidden="true"></i>
-                    </span>
-                </div>
-                <div class="col-sm-5 social">
-                    <ul>
-                        <li>
-                            <a href="https://github.com/Jesper-SH-Hong" target="_blank"><i class="fa fa-github"
-                                    aria-hidden="true"></i></a>
-                        </li>
-                        <!-- <li>
-                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow"
-                                    aria-hidden="true"></i></a>
-                        </li> -->
-                        <li>
-                            <a href="https://www.linkedin.com/in/jespershhong" target="_blank"><i class="fa fa-linkedin"
-                                    aria-hidden="true"></i></a>
-                        </li>
-                        <!-- <li>
-                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"
-                                    aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter"
-                                    aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus"
-                                    aria-hidden="true"></i></a> -->
-                        <!-- </li> -->
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <!-- End footer -->
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/scripts.min.js"></script>
+    <p>Redirecting to another site...</p>
 </body>
-
 </html>
